# pulldown-cmark-frontmatter

./: CHANGELOG.md  Cargo.toml  README.md  frontmatter-example.html  frontmatter-example.md
.rustme/: config.ron  docs.md  header.md
coverage/: index.html
coverage/examples/: extractor.rs.html  html.rs.html  index.html
coverage/examples/shared/: index.html  mod.rs.html
coverage/src/: index.html  lib.rs.html
examples/: extractor.rs  html.rs
examples/shared/: mod.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/fmt/: trait.Debug.js
main/implementors/core/iter/traits/iterator/: trait.Iterator.js
main/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/pulldown_cmark_frontmatter/: all.html  index.html  sidebar-items.js  struct.CodeBlock.html  struct.Frontmatter.html  struct.FrontmatterExtractor.html
main/search.desc/pulldown_cmark_frontmatter/: pulldown_cmark_frontmatter-desc-0-.js
main/src/pulldown_cmark_frontmatter/: lib.rs.html
main/trait.impl/core/clone/: trait.Clone.js
main/trait.impl/core/fmt/: trait.Debug.js
main/trait.impl/core/iter/traits/iterator/: trait.Iterator.js
main/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
main/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: .crate-docs.md  lib.rs
