[package]
name = "pulldown-cmark-frontmatter"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Frontmatter extractor for Markdown documents"
repository = "https://github.com/khonsulabs/pulldown-cmark-frontmatter"
keywords = ["pulldown-cmark", "markdown", "frontmatter"]
categories = ["parser-implementations"]
readme = "./README.md"
rust-version = "1.58"

[dependencies]
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["html"] }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.8.0"

[workspace]
members = ["xtask"]
